# reactive-banana-gi-gtk

./: .gitignore  README.md  reactive-banana-gi-gtk.cabal  stack.yaml  test.ui
app/: Main.hs
example/: example.cabal
example/app/: Main.hs
reactive-banana-gi-gtk/: reactive-banana-gi-gtk.cabal
reactive-banana-gi-gtk/src/Reactive/Banana/GI/: Gtk.hs
src/Reactive/Banana/: Gtk.hs
src/Reactive/Banana/GI/: Gtk.hs
