name:                reactive-banana-gi-gtk
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/reactive-banana-gi-gtk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reactive.Banana.GI.Gtk
  build-depends:       base >= 4.7 && < 5,
                       reactive-banana
                     , gi-gtk
                     , haskell-gi-base
                     , transformers
                     , text
  default-language:    Haskell2010

executable gtk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reactive-banana-gi-gtk
                     , reactive-banana
                     , haskell-gi-base
                     , gi-gtk
                     , text
  default-language:    Haskell2010

test-suite reactive-banana-gi-gtk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reactive-banana-gi-gtk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mr/reactive-banana-gi-gtk.git
