name:                reactive-banana-gi-gtk
version:             0.4.1.0
synopsis:            Simple reactive programming with GTK GObject Introspection
description:         Create Events and Behaviors from GTK signals and attributes. Also supports sinking to attributes.
homepage:            https://github.com/mr/reactive-banana-gi-gtk
license:             PublicDomain
license-file:        LICENSE
author:              Megan Robinson
maintainer:          mrobinson7627@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reactive.Banana.GI.Gtk
  build-depends:       base >= 4.7 && < 5,
                       reactive-banana < 1.3
                     , gi-gtk >= 3.0.1.1 && < 5.0
                     , haskell-gi-base >= 0.20 && < 0.26
                     , transformers >= 0.5.2.0 && < 0.6
                     , text >= 1.2.2.1 && < 1.3
  default-language:    Haskell2010

test-suite reactive-banana-gi-gtk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reactive-banana-gi-gtk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mr/reactive-banana-gi-gtk.git
